# CTLAnalysisTool

./: .gitignore  README.md  run_benchmarks.sh  run_benchmarks_command.sh  run_file_per_file.py  run_file_per_file2.py  run_file_per_fileMCC.py  run_file_per_file_RERSINDFromTOP.py  setup.sh  setup_benchmarks.sh
CTLAnalysisTool/: CMakeLists.txt  collect_formula_info.cpp  ctl_refinement_tool.cpp  sat_checker.cpp
CTLAnalysisTool/include/: CTLautomaton.h  ExternSATInterface.h  SCCBlocks.h  SMTInterface.h  analysis_result.h  analyzerInterface.h  formula.h  formula_utils.h  game_graph.h  memory_tracker.h  parser.h  property.h  property_generator.h  refinement_graph.h  solverPool.h  symbolic_evaluator.h  synthetic_benchmark.h  synthetic_model.h  transition_expressions.h  transitions.h  types.h  union_find.h  utils.h  visitors.h
CTLAnalysisTool/include/Analyzers/: Refinement.h  SAT.h
CTLAnalysisTool/include/ExternalCTLSAT/: ctl_sat.h  mlsolver_sat.h
CTLAnalysisTool/include/Factories/: externalSatFactory.h
CTLAnalysisTool/include/SMTInterfaces/: CVC5SMTInterface.h  Z3SMTInterface.h
CTLAnalysisTool/include/sat_parsers/: ctlsat_parser.h  mlsolver_parser.h
CTLAnalysisTool/src/: CVC5SMTInterface.cpp  SCCBlocks.cpp  Z3SMTInterface.cpp  ctl_sat.cpp  ctlsat_parser.cpp  formula.cpp  formula_utils.cpp  lexer.cpp  parser.cpp  property.cpp  property_generator.cpp  refinement_graph.cpp  synthetic_benchmark.cpp  synthetic_model.cpp  transition_expressions.cpp  union_find.cpp  utils.cpp  visitors.cpp
CTLAnalysisTool/src/CTLautomatonImplementations/: CTLAutomatonEmptiness.cpp  CTLAutomatonEmptinessOF.cpp  CTLAutomatonSimulates.cpp  CTLBuildGameGraph.cpp  CTLautomaton.cpp  CTLautomatonBuilding.cpp  CTLautomatonLanguageIncludes.cpp
CTLAnalysisTool/src/ExternSatInterfaces/: ctl_sat.cpp  mlsolver_sat.cpp
CTLAnalysisTool/src/RefinementAnalyzer/: basic.cpp  refinement_analysis.cpp
CTLAnalysisTool/src/SATAnalyzer/: basic.cpp  sat_analysis.cpp
CTLAnalysisTool/src/parsers/: ctlsat_parser.cpp  mlsolver_parser.cpp
CTLAnalysisTool/tests/: simple_test_simulation.cpp  test_abta.cpp  test_atom_collector.cpp  test_ctl_sat.cpp  test_ctlsat_parser.cpp  test_language_inclusion.cpp  test_mlsolver_parser.cpp  test_satisfiability.cpp  test_simulation.cpp  test_z3_simple.cpp
assets/: analysis_config.yaml
assets/benchmark/: get_dataset.sh
assets/benchmark/Dataset_clean/: m41_ctl_properties.txt
assets/benchmark/Dataset_left/: m55_ctl_properties.txt
assets/benchmark/Dataset_lite/MCC/: AirplaneLD-COL-0010-CTLCardinality-00.txt  AutoFlight-PT-96b-CTLCardinality-00.txt  BART-PT-060-CTLCardinality-00.txt  BridgeAndVehicles-COL-V04P05N02-CTLCardinality-00.txt  BusinessProcesses-PT-20-CTLCardinality-00.txt  CANConstruction-PT-100-CTLCardinality-00.txt  CSRepetitions-PT-03-CTLCardinality-00.txt  CircularTrains-PT-768-CTLCardinality-00.txt  CloudDeployment-PT-7b-CTLCardinality-00.txt  CloudOpsManagement-PT-20480by10240-CTLCardinality-00.txt  DES-PT-60b-CTLCardinality-00.txt  DNAwalker-PT-18lozangeBlock-CTLCardinality-00.txt  DiscoveryGPU-PT-15b.txt  FlexibleBarrier-PT-22b-CTLCardinality-00.txt  GlobalResAllocation-PT-05-CTLCardinality-00.txt  HealthRecord-PT-17-CTLCardinality-00.txt  HexagonalGrid-PT-816-CTLCardinality-00.txt  HouseConstruction-PT-32000-CTLCardinality-00.txt  IBM703-PT-none-CTLCardinality-00.txt  Parking-PT-864-CTLCardinality-00.txt  RERS17pb115-PT-9-CTLCardinality-00.txt  Railroad-PT-100-CTLCardinality-00.txt  RobotManipulation-PT-10000-CTLCardinality-00.txt  SatelliteMemory-PT-X03000Y0094-CTLCardinality-00.txt  SemanticWebServices-PT-S256P18-CTLCardinality-00.txt  SharedMemory-PT-000200-CTLCardinality-00.txt  SimpleLoadBal-PT-10-CTLCardinality-00.txt  SmartHome-PT-19-CTLCardinality-00.txt  UtilityControlRoom-PT-Z4T4N10.txt  VehicularWifi-COL-none.txt
assets/benchmark/Dataset_lite/ParallelRers2019Ctl/: problem101-ctl-properties.txt  problem102-ctl-properties.txt  problem103-ctl-properties.txt  problem104-ctl-properties.txt  problem105-ctl-properties.txt  problem106-ctl-properties.txt  problem107-ctl-properties.txt  problem108-ctl-properties.txt  problem109-ctl-properties.txt
assets/benchmark/Dataset_lite/Rers2019Ind/: m106_ctl_properties.txt  m131_ctl_properties.txt  m132_ctl_properties.txt  m135_ctl_properties.txt  m158_ctl_properties.txt  m159_ctl_properties.txt  m164_ctl_properties.txt  m167_ctl_properties.txt  m172_ctl_properties.txt  m173_ctl_properties.txt  m181_ctl_properties.txt  m182_ctl_properties.txt  m183_ctl_properties.txt  m185_ctl_properties.txt  m189_ctl_properties.txt  m190_ctl_properties.txt  m196_ctl_properties.txt  m199_ctl_properties.txt  m201_ctl_properties.txt  m22_ctl_properties.txt  m24_ctl_properties.txt  m27_ctl_properties.txt  m45_ctl_properties.txt  m49_ctl_properties.txt  m54_ctl_properties.txt  m65_ctl_properties.txt  m76_ctl_properties.txt  m95_ctl_properties.txt
assets/benchmark/dataset_scripts/: extractMCC.py  prepare_dataset.py
assets/benchmark/patches/: Makefile.am
assets/formula_info/: info_per_file_2018.csv  info_per_file_2019.csv  info_per_file_2020.csv  info_per_file_2021.csv  info_per_file_2022.csv  info_per_file_2023.csv  info_per_file_2024.csv  info_per_file_MCC.csv  info_per_file_ParallelRers2019Ctl.csv  info_per_file_Rers2019Ind.csv  overall_info copy.csv  overall_info.csv
assets/tests/: AirplaneLD-COL-0010.txt  comprehensive_test.txt  ctl_sat_test.txt  debug_parser  debug_test.txt  input_benchmarks_test.csv  sample_properties.txt  simple_test.txt  simpletest.txt  test_all_equivalent.txt  test_binary.txt  test_cycle.txt  test_formulas.txt
scripts/: analysis_alternative.py  count_files.py  count_rers.py  create_analysis.py  generate_latex_table.py  iterative_analysis_manual.py  run_file_per_file.py  run_lola_benchmark.py
scripts/Analysis/: __init__.py  compared_visualization.py  correlation_plot.py  formula_complexity_analyzer.py  generate_table.py  generate_table2.py  generate_table3.py  generate_table4.py  parse_skipped_pairs.py  single_visualization.py  summary.py  utils.py
